任意のメッセージ

--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <p class="header__left">COACHTECH</p>
         <ul class="header__right">
-            <li class="header__content"><a href="">ホーム</a></li>
-            <li class="header__content"><a href="">事業内容</a></li>
-            <li class="header__content"><a href="">採用情報</a></li>
-            <li class="header__content"><a href="">お問い合わせ</a></li>
+            <li class="header__content"><a href="" style="text-decoration:none;">ホーム</a></li>
+            <li class="header__content"><a href="" style="text-decoration:none;">事業内容</a></li>
+            <li class="header__content"><a href="" style="text-decoration:none;">採用情報</a></li>
+            <li class="header__content"><a href="" style="text-decoration:none;">お問い合わせ</a></li>
         </ul>
     </header>
     <div class="main">
-        <img src="img/firstview.jpeg" alt="" width="100%" height="100%">
+        <img src="img/firstview.jpeg" alt="">
         <h1 class="main__ttl">毎日を笑顔に</h1>
         <div class="main__box"></div>
     </div>
